[package]
name = "wral"
version = "0.1.0"
description = "Write ahead logging for durability"
repository = "https://github.com/bnclabs/wral"
keywords = ["wal", "db", "database"]
categories = ["concurrency", "database", "filesystem"]
authors = ["prataprc <prataprc@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/wral/"
edition = "2018"

[[bin]]
name = "perf"
required-features = ["perf"]

[dependencies]
mkit = { path = "../mkit", version = "0.2.0" }
log = "0.4"
arbitrary = { version = "0.4", features = ["derive"] }
tempfile = "3"

structopt = { version = "0.3.20", default-features = false, optional = true }
rand = { version = "0.7.3", features = ["small_rng"], optional = true }

[dev-dependencies]
rand = { version = "0.7.3", features = ["small_rng"]}

[features]
perf = ["structopt", "rand"]
