[package]
name = "wral"
version = "0.2.0"
description = "Write ahead logging for durability"
repository = "https://github.com/bnclabs/wral"
documentation = "https://docs.rs/wral/"
keywords = ["wal", "db", "database"]
categories = ["concurrency", "database", "filesystem"]
authors = ["prataprc <prataprc@gmail.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"

[profile.release]
debug = true

[profile.bench]
debug = true

[[bin]]
name = "perf"
required-features = ["perf"]

[dependencies]
mkit = { path = "../../_archive/mkit", version = "0.4.0" }
log = "0.4"
arbitrary = { version = "0.4", features = ["derive"] }
tempfile = "3"

structopt = { version = "0.3.20", default-features = false, optional = true }
rand = { version = "0.7.3", features = ["small_rng"], optional = true }

[dev-dependencies]
rand = { version = "0.7.3", features = ["small_rng"]}

[features]
perf = ["structopt", "rand"]
